// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`OAuthConnectButton.vue > when the admin config is not okay > should show message for admin user 1`] = `
<div
  data-v-app=""
>
  
  <div
    class="oauth-connect--message"
    data-v-82450aba=""
  >
    Some OpenProject Integration application settings are not working. Configure the OpenProject Integration in: {htmlLink}
  </div>
  <!-- eslint-disable-line vue/no-v-html -->
  
</div>
`;

exports[`OAuthConnectButton.vue > when the admin config is not okay > should show message for normal user 1`] = `
<div
  data-v-app=""
>
  
  <div
    class="oauth-connect--message"
    data-v-82450aba=""
  >
    Some OpenProject Integration application settings are not working. Please contact your Nextcloud administrator.
  </div>
  <!-- eslint-disable-line vue/no-v-html -->
  
</div>
`;
